@@ -4,7 +4,7 @@
 \usage{
   graphTest(pvalues, weights = NULL, alpha = 0.05,
     G = NULL, cr = NULL, graph = NULL, verbose = FALSE,
-    test)
+    test, upscale = FALSE)
 }
 \arguments{
   \item{pvalues}{Either a vector or a matrix containing the
@@ -49,6 +49,13 @@
   smaller than one. If \code{test="simple-parametric"} the
   tests are performed as defined in Equation (3) of Bretz
   et al. (2011).}
+
+  \item{upscale}{Logical. If \code{FALSE} for each
+  intersection of hypotheses a weighted test is performed
+  at the reduced level alpha of sum(w)*alpha, where sum(w)
+  is the sum of all node weights in this subset. If
+  \code{upscale=TRUE} all weights are upscaled, so that
+  sum(w)=1.}
 }
 \value{
   A vector or a matrix containing the test results for the
