@@ -429,7 +429,7 @@ This can be implemented in \gmcp by additionally passing the correlation
 matrix to \gmcp:
 
 <<>>=
-gMCP(G,p,corr=Cm2,test="Bretz2011")
+gMCP(G,p,corr=Cm2,test="parametric")
 @ 
 
 which returns a similar result however without the graphs representing
